--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
   "devDependencies": {
-    "@types/jest": "24.0.18",
-    "@types/material-ui": "^0.21.16",
-    "@types/react": "~17.0.58",
-    "@types/react-dom": "^18.2.19",
+    "@types/jest": "29.5.13",
+    "@types/material-ui": "^0.21.17",
+    "@types/react": "~18.3.11",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
-    "css-loader": "^6.7.3",
-    "csstype": "^2.6.18",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
-    "jest": "^29.6.1",
-    "prettier": "^1.19.1",
-    "sass": "1.32.0",
-    "sass-loader": "^10.0.0",
-    "style-loader": "^1.0.0",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^6.1.2",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^4.5.5",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "css-loader": "^7.1.2",
+    "csstype": "^3.1.3",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "sass": "1.79.4",
+    "sass-loader": "^16.0.2",
+    "style-loader": "^4.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "typescript": "^5.6.2",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/lab": "^5.0.0-alpha.165",
-    "@mui/material": "^5.15.10",
-    "@mui/styles": "^5.15.10",
-    "@mui/x-data-grid": "^5.17.12",
-    "@remirror/pm": "^1.0.11",
-    "@remirror/react": "^1.0.21",
-    "@types/lodash": "^4.14.176",
-    "@types/react-beautiful-dnd": "^13.0.0",
-    "date-fns": "^2.29.3",
-    "immutability-helper": "^3.0.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/lab": "^6.0.0-beta.10",
+    "@mui/material": "^6.1.2",
+    "@mui/styles": "^6.1.2",
+    "@mui/x-data-grid": "^7.18.0",
+    "@remirror/pm": "^3.0.0",
+    "@remirror/react": "^3.0.1",
+    "@types/lodash": "^4.17.10",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "date-fns": "^4.1.0",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
-    "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.0.0",
+    "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^6.15.8",
-    "react-qr-code": "^2.0.7",
-    "react-router-dom": "^6.2.1",
-    "recharts": "2.12.6",
-    "remirror": "^1.0.60"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-qr-code": "^2.0.15",
+    "react-router-dom": "^6.26.2",
+    "recharts": "2.12.7",
+    "remirror": "^3.0.1"
   },
   "resolutions": {
     "csstype": "^2.6.18"
   },
   "overrides": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "prettier": "^1.19.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "prettier": "^3.3.3"
   },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
