--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@types/jest": "24.0.18",
+    "@types/jest": "^24.0.18",
     "@types/material-ui": "^0.21.16",
     "@types/react": "~17.0.58",
     "@types/react-dom": "^18.2.19",
@@ -13,12 +13,12 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "prettier": "^1.19.1",
     "sass": "1.32.0",
     "sass-loader": "^10.0.0",
     "style-loader": "^1.0.0",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^6.1.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^5.7.2",
