--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@typescript-eslint/parser": "^4.1.1",
     "css-loader": "^6.7.3",
     "csstype": "^2.6.18",
-    "eslint": "^7.0.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
@@ -62,7 +62,7 @@
     "build": "webpack --config webpack.prod.js",
     "build-dev": "webpack --config webpack.dev.js",
     "watch": "webpack --config webpack.dev.js --watch",
-    "lint": "eslint .  --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint .",
     "fix": "npm run lint -- --fix",
     "test": "echo 'Running JS tests' && jest"
   }
