--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "css-loader": "^6.7.3",
     "csstype": "^2.6.18",
-    "eslint": "8.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.37.2",
