--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@mui/material": "^5.15.10",
     "@mui/styles": "^5.15.10",
     "@mui/x-data-grid": "^5.17.12",
-    "@remirror/pm": "^2.0.9",
-    "@remirror/react": "^2.0.35",
+    "@remirror/pm": "^3.0.0",
+    "@remirror/react": "^3.0.1",
+    "@remirror/react-ui": "^1.0.1",
     "@types/lodash": "^4.14.176",
     "@types/react-beautiful-dnd": "^13.0.0",
     "date-fns": "^2.29.3",
@@ -47,7 +48,7 @@
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.2.1",
     "recharts": "2.12.6",
-    "remirror": "^2.0.40"
+    "remirror": "^3.0.1"
   },
   "resolutions": {
     "csstype": "^2.6.18"
