--- a/.github/workflows/admin-console.yml
+++ b/.github/workflows/admin-console.yml
@@ -24,23 +24,30 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - uses: pnpm/action-setup@v3
+        with:
+          version: latest
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
+          cache: 'pnpm'
 
       - name: Test + build
         run: |
-          npm install
-          npm run lint
-          npm run test
-          npm run build
+          pnpm install
+          pnpm lint
+          pnpm test
+          pnpm build
 
       - name: cdk
         working-directory: ./cdk
         run: |
-          npm install -g yarn
-          ./script/ci
+          pnpm install
+          pnpm lint
+          pnpm test
+          pnpm synth
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
