--- a/cdk/package.json
+++ b/cdk/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "test-update": "jest -u",
     "format": "prettier --write \"{lib,bin}/**/*.ts\"",
     "lint": "eslint lib/** bin/** --ext .ts --no-error-on-unmatched-pattern",
     "synth": "cdk synth --path-metadata false --version-reporting false",
