--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "concurrently": "^9.1.2",
     "css-loader": "^6.7.3",
     "csstype": "^2.6.18",
     "eslint": "^8.57.0",
