--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "concurrently": "^9.1.2",
     "css-loader": "^6.7.3",
     "csstype": "^2.6.18",
     "eslint": "^8.57.0",
@@ -28,6 +29,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.10",
@@ -41,6 +43,7 @@
     "immutability-helper": "^3.0.1",
     "lodash": "^4.17.21",
     "lz-string": "^1.5.0",
+    "prosemirror-state": "^1.4.3",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
@@ -63,7 +66,7 @@
     "build-dev": "webpack --config webpack.dev.js",
     "watch": "webpack --config webpack.dev.js --watch",
     "lint": "eslint .",
-    "fix": "npm run lint -- --fix",
     "test": "echo 'Running JS tests' && jest"
-  }
+  },
+  "packageManager": "pnpm@8.15.7"
 }
