--- a/scripts/updatePermissions/package.json
+++ b/scripts/updatePermissions/package.json
@@ -7,7 +7,8 @@
     "updatePermissions": "ts-node updatePermissions.ts"
   },
   "dependencies": {
-    "aws-sdk": "^2.1372.0"
+    "@aws-sdk/client-dynamodb": "^3.782.0",
+    "@aws-sdk/lib-dynamodb": "^3.782.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
