--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-qr-code": "^2.0.7",
     "react-router-dom": "^6.2.1",
     "recharts": "2.12.6",
-    "remirror": "^3.0.1"
+    "remirror": "^3.0.1",
+    "uuid": "^13.0.0"
   },
   "resolutions": {
     "csstype": "^2.6.18"
